<resources>
    <string name="app_name">MyChat</string>
    <string name="register">Register</string>
    <string name="login">Log in</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="auth_failed">Authentication failed.</string>
    <string name="ok">OK</string>
    <string name="fill_fields">Please fill the fields correctly.</string>
    <string name="user_profile">user profile</string>
    <string name="enter_message">Enter a message</string>
    <string name="logout">Logout</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="bg_description">two guys in a boat</string>
    <string name="woods">wood floor</string>
</resources>
